# anime-fetch

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CompilerWarnings.cmake  README.md  build.zig  build.zig.zon  credits.md  default.nix  flake.nix  install-library.sh  install_app.bat  install_app.sh  install_library.bat  install_library.sh  prepare.cmd  prepare.sh  remove-app.sh  setup-vcpkg .sh  setup-vcpkg.sh  shell.nix  vcpkg.json  version.cpp
anime-fetch-cli/: .gitignore  CMakeLists.txt  GNUmakefile  animefetch  animefetch.c  app.rc
anime-fetch-cli++/: CMakeLists.txt
anime-fetch-cli++/src/: main.cpp
anime-fetch-cli++/src/configs/: app_config.h
anime-fetch-cli/services/: system_info_service.h
anime-fetch-cli/src/: animefetch.c
anime-fetch-cli/src/configs/: app_config.h
anime-fetch-cli/src/services/: system_info_service.h
anime-fetch-gui/: .clang-tidy  CMakeLists.txt  app.rc
anime-fetch-gui/src/configs/: app_config.h
assets/data/: os_tan_list.json
assets/docs/: compiling.md  credits.md
assets/images/os-tan/windows/: .gitignore  windows-tan-links.bat  windows-tan-links.sh
assets/legals/: license.txt
cli/: CMakeLists.txt
cli/src/: cmdline_utils.h  colors.hpp  main.cpp  os_type.hpp
cli/src/config/: app_config.cpp  app_config.h  cmd_args.cpp  cmd_args.h
cli/src/configs/: app_config.h
cli/src/models/: cpu_info.hpp
cli/src/services/: system_info_service.cpp  system_info_service.hpp
cli/src/utils/: cmdline_utils.cpp  cmdline_utils.h  utils.cpp  utils.hpp
gui/: CMakeLists.txt
gui/src/: app.cpp
gui/src/config/: gui_config.h
gui/src/configs/: gui_config.cpp  gui_config.h
gui/src/services/: system_info_service.cpp
gui/src/view/: main_window.h
lib/: CMakeLists.txt
lib/data/: linux-modules.json
lib/scripts/: xfetch.sh
lib/src/: colors.hpp
lib/src/config/: cmd_args.cpp
lib/src/configs/: app_config.h  cmd_args.cpp  cmd_args.h  lib_config.h
lib/src/models/: battery_info.hpp  cpu_info.hpp  disk_info.hpp  gpu_info.hpp  image_info.hpp  kernel_info.hpp  location.hpp  mainboard_info.hpp  memory_info.hpp  os_info.hpp  os_tan.hpp  os_tan_family.hpp
lib/src/modules/: battery_info_mod.cpp  battery_info_mod.h  battery_module.cpp  battery_module.h  cpu_mod.cpp  cpu_mod.h  cpu_module.cpp  cpu_module.h  disk_mod.cpp  disk_mod.h  disk_module.cpp  disk_module.h  gpu_mod.cpp  gpu_mod.h  gpu_module.cpp  kernel_info_module.cpp  kernel_info_module.h  kernel_mod.cpp  kernel_mod.h  mainboard_mod.cpp  mainboard_mod.h  mainboard_module.cpp  memory_mod.cpp  memory_mod.h  module.hpp  os_mod.cpp  os_mod.h  os_module.cpp  os_module.h  os_tan_mod.cpp  os_tan_mod.h
lib/src/services/: system_info_service.cpp  system_info_service.h
lib/src/utils/: utils.cpp
libs/src/configs/: cmd_args.cpp  lib_config.cpp  lib_config.h
libs/src/models/: cpu_info.hpp  gpu_info.hpp  image.hpp  memory_info.hpp  os_info.hpp  os_tan.hpp
libs/src/modules/: battery_module.cpp  cpu_module.cpp  disk_module.cpp  disk_module.h  gpu_module.h  kernel_info_module.cpp  kernel_info_module.h  mainboard_module.h  memory_module.cpp  memory_module.h  os_tan_module.cpp  os_tan_module.h
libs/src/services/: system_info_service.cpp
libs/src/utils/: cmdline_utils.cpp  utils.hpp
pkg/: anime-fetch-bsd.desktop  anime-fetch-cli.iss  anime-fetch-gui.iss  anime-fetch-linux.desktop  anime-fetch.iss
src/: app.cpp  main.cpp  main.zig
